--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -1,6 +1,3 @@
-//
-// Theme
-// --------------------------------------------------
-// Load variables
+// Variables
 @import "../bootstrap/variables";
 @import "variables";
