--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -1,3 +1,11 @@
 // Variables
 @import "../bootstrap/variables";
 @import "variables";
+// Layout
+@import "layout/header";
+@import "layout/footer";
+// Components
+@import "components/type";
+@import "components/buttons";
+@import "components/carousel";
+@import "components/jumbotron";
