--- a/resources/views/partials/metadata.twig
+++ b/resources/views/partials/metadata.twig
@@ -17,6 +17,7 @@
 {{ asset_add("theme.css", "theme::less/theme/theme.less") }}
 
 {{ asset_add("theme.js", "theme::js/vendor/jquery.min.js") }}
+{{ asset_add("theme.js", "theme::js/libraries/*") }}
 {{ asset_add("theme.js", "theme::js/theme/*") }}
 
 {{ asset_style("theme.css") }}
