--- a/resources/less/theme/variables.less
+++ b/resources/less/theme/variables.less
@@ -7,16 +7,24 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@gray-base:              #000;
-@gray-darker:            lighten(@gray-base, 13.5%); // #222
-@gray-dark:              lighten(@gray-base, 20%);   // #333
-@gray:                   lighten(@gray-base, 33.5%); // #555
+@red:                   #f2364b;
+@blue:                  #00b2d4;
+@navy:                  #3c4e5a;
+@smoke:                 #f8f8f8;
+@green:                 #2ecc71;
+@purple:                #8a8acb;
+@orange:                #ec8a69;
+
+@gray-base:              #151515;
+@gray-darker:            #2e2e2e;
+@gray-dark:              #343434;
+@gray:                   #686868;
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         darken(#428bca, 6.5%); // #337ab7
+@brand-primary:         @red;
 @brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
+@brand-info:            @blue;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
@@ -42,22 +50,23 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
+@font-family-brand:       "Proxima", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          14px;
+@font-size-base:          15px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
-@font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
-@font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
-@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
-@font-size-h5:            @font-size-base;
-@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
+@font-size-h1:            36px;
+@font-size-h2:            30px;
+@font-size-h3:            21px;
+@font-size-h4:            15px;
+@font-size-h5:            12px;
+@font-size-h6:            12px;
 
 //** Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.428571429; // 20/14
@@ -65,10 +74,10 @@
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
-@headings-font-family:    inherit;
-@headings-font-weight:    500;
-@headings-line-height:    1.1;
-@headings-color:          inherit;
+@headings-font-family:    @font-family-brand;
+@headings-font-weight:    700;
+@headings-line-height:    1.3;
+@headings-color:          @gray-dark;
 
 
 //== Iconography
@@ -102,9 +111,9 @@
 @line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
 @line-height-small:         1.5;
 
-@border-radius-base:        4px;
-@border-radius-large:       6px;
-@border-radius-small:       3px;
+@border-radius-base:        3px;
+@border-radius-large:       5px;
+@border-radius-small:       2px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    #fff;
@@ -322,7 +331,7 @@
 //## Define your custom responsive grid.
 
 //** Number of columns in the grid.
-@grid-columns:              12;
+@grid-columns:              24;
 //** Padding between columns. Gets divided in half for the left and right.
 @grid-gutter-width:         30px;
 // Navbar collapse
@@ -347,7 +356,7 @@
 @container-md:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      (1140px + @grid-gutter-width);
+@container-large-desktop:      (1000px + @grid-gutter-width);
 //** For `@screen-lg-min` and up.
 @container-lg:                 @container-large-desktop;
 
@@ -488,8 +497,8 @@
 @jumbotron-color:                inherit;
 @jumbotron-bg:                   @gray-lighter;
 @jumbotron-heading-color:        inherit;
-@jumbotron-font-size:            ceil((@font-size-base * 1.5));
-@jumbotron-heading-font-size:    ceil((@font-size-base * 4.5));
+@jumbotron-font-size:            21px;
+@jumbotron-heading-font-size:    @font-size-h1;
 
 
 //== Form states and alerts
@@ -848,7 +857,7 @@
 //** Horizontal offset for forms and lists.
 @component-offset-horizontal: 180px;
 //** Text muted color
-@text-muted:                  @gray-light;
+@text-muted:                  rgba(0, 0, 0, 0.5);
 //** Abbreviations and acronyms border color
 @abbr-border-color:           @gray-light;
 //** Headings small color
