--- a/resources/less/theme/components/jumbotron.less
+++ b/resources/less/theme/components/jumbotron.less
@@ -33,12 +33,17 @@
     background-color: @gray;
 }
 
+.jumbotron.jumbotron-purple {
+    background-color: @gray;
+}
+
 .jumbotron.jumbotron-gray-dark {
     background-color: @gray-dark;
 }
 
 .jumbotron-red,
 .jumbotron-gray,
+.jumbotron-purple,
 .jumbotron-gray-dark {
     * {
         color: #ffffff;
