--- a/resources/less/theme/layout/header.less
+++ b/resources/less/theme/layout/header.less
@@ -5,6 +5,12 @@
     .navbar-site {
         margin-bottom: 0;
 
+        .navbar-toggle {
+            .icon-bar {
+                background: #ffffff;
+            }
+        }
+
         .navbar-brand {
             color: #ffffff;
             font-size: 22px;
@@ -25,6 +31,7 @@
 
             li {
                 margin-left: 5px;
+                margin-bottom: 5px;
 
                 a {
                     color: #ffffff;
