--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -9,3 +9,5 @@
 @import "components/buttons";
 @import "components/carousel";
 @import "components/jumbotron";
+@import "components/scaffolding";
+@import "components/documentation";
