--- a/resources/views/hello.twig
+++ b/resources/views/hello.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
 
-    Hello!
+    {% include "theme::partials/slider" %}
+    {% include "theme::partials/showcase" %}
 
 {% endblock %}
