--- a/resources/views/partials/header.twig
+++ b/resources/views/partials/header.twig
@@ -12,7 +12,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{{ url_to('/') }}">
                     {{ image('theme::img/icon-white-128.png') }}
                     PyroCMS
                 </a>
@@ -20,8 +20,11 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Demo</a></li>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">Community</a></li>
                     <li><a class="btn btn-inverted" href="#">Download</a></li>
                 </ul>
             </div>
