--- a/resources/views/partials/slider.twig
+++ b/resources/views/partials/slider.twig
@@ -3,6 +3,11 @@
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="6"></li>
     </ol>
 
     <div class="carousel-inner" role="listbox">
@@ -25,6 +30,71 @@
                 <div class="container">
 
                     <h1><a href="#">Powered by Laravel</a></h1>
+
+                    <p>Whether you're a developer or designer, manager or assistant, PyroCMS helps you quickly design, build and manage your website. </p>
+
+                    <p><a href="#"><strong>Download for free</strong></a> and check out our <a href="#documentation"><strong>documentation</strong></a> to get started.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="jumbotron jumbotron-red">
+                <div class="container">
+
+                    <h1><a href="#">Ready to go</a></h1>
+
+                    <p>Whether you're a developer or designer, manager or assistant, PyroCMS helps you quickly design, build and manage your website. </p>
+
+                    <p><a href="#"><strong>Download for free</strong></a> and check out our <a href="#documentation"><strong>documentation</strong></a> to get started.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="jumbotron jumbotron-red">
+                <div class="container">
+
+                    <h1><a href="#">Multilingual out of the box</a></h1>
+
+                    <p>Whether you're a developer or designer, manager or assistant, PyroCMS helps you quickly design, build and manage your website. </p>
+
+                    <p><a href="#"><strong>Download for free</strong></a> and check out our <a href="#documentation"><strong>documentation</strong></a> to get started.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="jumbotron jumbotron-red">
+                <div class="container">
+
+                    <h1><a href="#">Old dog, new tricks</a></h1>
+
+                    <p>Whether you're a developer or designer, manager or assistant, PyroCMS helps you quickly design, build and manage your website. </p>
+
+                    <p><a href="#"><strong>Download for free</strong></a> and check out our <a href="#documentation"><strong>documentation</strong></a> to get started.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="jumbotron jumbotron-red">
+                <div class="container">
+
+                    <h1><a href="#">Easy to learn</a></h1>
+
+                    <p>Whether you're a developer or designer, manager or assistant, PyroCMS helps you quickly design, build and manage your website. </p>
+
+                    <p><a href="#"><strong>Download for free</strong></a> and check out our <a href="#documentation"><strong>documentation</strong></a> to get started.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="jumbotron jumbotron-red">
+                <div class="container">
+
+                    <h1><a href="#">Undeniable powerhouse</a></h1>
 
                     <p>Whether you're a developer or designer, manager or assistant, PyroCMS helps you quickly design, build and manage your website. </p>
 
