--- a/resources/less/theme/components/type.less
+++ b/resources/less/theme/components/type.less
@@ -1,9 +1,12 @@
 .list-unstyled {
-    padding-left: 0;
-    list-style: none;
-
-    li:not(:last-child) {
+    li {
         margin-bottom: @padding-base-vertical;
+    }
+}
+
+.list-condensed {
+    li {
+        margin-bottom: 0 !important;
     }
 }
 
