--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -6,6 +6,7 @@
 @import "layout/footer";
 // Components
 @import "components/type";
+@import "components/tiles";
 @import "components/buttons";
 @import "components/carousel";
 @import "components/jumbotron";
