--- a/resources/views/documentation.twig
+++ b/resources/views/documentation.twig
@@ -2,28 +2,59 @@
 
 {% block content %}
 
-    <div class="container bottom-buffer-8">
+    <div class="container">
 
-        <aside id="documentation" class="col-lg-6">
-            <div data-spy="affix" data-offset-top="78">
+        <aside id="documentation" class="col-lg-6 col-sm-6">
 
-                <h4>Introduction</h4>
+            <h4>Introduction</h4>
 
-                <ul class="list-unstyled list-condensed">
-                    <li><a href="#">PyroCMS</a></li>
-                    <li><a href="#">Streams Core</a></li>
-                </ul>
+            <ul class="list-unstyled list-condensed">
+                <li><a href="#">PyroCMS</a></li>
+                <li><a href="#">Streams Core</a></li>
+            </ul>
 
-                <h4>Setup</h4>
+            <h4>Setup</h4>
 
-                <ul class="list-unstyled list-condensed">
-                    <li><a href="#">Installation</a></li>
-                    <li><a href="#">Configuration</a></li>
-                </ul>
-            </div>
+            <ul class="list-unstyled list-condensed">
+                <li><a href="#">Installation</a></li>
+                <li><a href="#">Configuration</a></li>
+            </ul>
+
+            <h4>Services</h4>
+
+            <ul class="list-unstyled list-condensed">
+                <li><a href="#">Assets</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#">Forms</a></li>
+                <li><a href="#">Tables</a></li>
+                <li><a href="#">Trees</a></li>
+                <li><a href="#">Grids</a></li>
+            </ul>
+
+            <h4>Streams</h4>
+
+            <ul class="list-unstyled list-condensed">
+                <li><a href="#">Introduction</a></li>
+                <li><a href="#">Streams</a></li>
+                <li><a href="#">Fields</a></li>
+                <li><a href="#">Entries</a></li>
+            </ul>
+
+            <h4>Development</h4>
+
+            <ul class="list-unstyled list-condensed">
+                <li><a href="#">Introduction</a></li>
+                <li><a href="#">Modules</a></li>
+                <li><a href="#">Field Types</a></li>
+                <li><a href="#">Themes</a></li>
+                <li><a href="#">Plugins</a></li>
+                <li><a href="#">Extensions</a></li>
+                <li><a href="#">Blocks</a></li>
+            </ul>
+
         </aside>
 
-        <div class="col-lg-18">
+        <div class="col-lg-18 col-sm-18">
 
             {% markdown %}
             # PyroCMS
