--- a/resources/less/theme/components/jumbotron.less
+++ b/resources/less/theme/components/jumbotron.less
@@ -33,8 +33,16 @@
     background-color: @gray;
 }
 
+.jumbotron.jumbotron-green {
+    background-color: @green;
+}
+
 .jumbotron.jumbotron-purple {
-    background-color: @gray;
+    background-color: @purple;
+}
+
+.jumbotron.jumbotron-orange {
+    background-color: @orange;
 }
 
 .jumbotron.jumbotron-gray-dark {
@@ -43,6 +51,8 @@
 
 .jumbotron-red,
 .jumbotron-gray,
+.jumbotron-green,
+.jumbotron-orange,
 .jumbotron-purple,
 .jumbotron-gray-dark {
     * {
