--- a/resources/less/theme/variables.less
+++ b/resources/less/theme/variables.less
@@ -11,9 +11,9 @@
 @blue:                  #00b2d4;
 @navy:                  #3c4e5a;
 @smoke:                 #f8f8f8;
-@green:                 #2ecc71;
+@green:                 #68c188;
 @purple:                #8a8acb;
-@orange:                #ec8a69;
+@orange:                #f9886c;
 
 @gray-base:              #151515;
 @gray-darker:            #2e2e2e;
@@ -69,14 +69,14 @@
 @font-size-h6:            12px;
 
 //** Unit-less `line-height` for use in components like buttons.
-@line-height-base:        1.428571429; // 20/14
+@line-height-base:        1.5; // 20/14
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
 @headings-font-family:    @font-family-brand;
 @headings-font-weight:    700;
-@headings-line-height:    1.3;
+@headings-line-height:    1.7;
 @headings-color:          @gray-dark;
 
 
