--- a/resources/views/partials/header.twig
+++ b/resources/views/partials/header.twig
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Addons</a></li>
                     <li><a href="#">Demo</a></li>
                     <li><a href="#">Documentation</a></li>
                     <li><a href="#">Community</a></li>
