--- a/resources/less/theme/variables.less
+++ b/resources/less/theme/variables.less
@@ -10,6 +10,7 @@
 @red:                   #f2364b;
 @blue:                  #00b2d4;
 @navy:                  #3c4e5a;
+@night:                 #142736;
 @smoke:                 #f8f8f8;
 @green:                 #68c188;
 @purple:                #8a8acb;
