--- a/resources/views/documentation.twig
+++ b/resources/views/documentation.twig
@@ -6,18 +6,14 @@
 
         <aside id="documentation" class="col-lg-6 col-sm-6">
 
-            <h4>Introduction</h4>
+            <h4>Getting Started</h4>
 
             <ul class="list-unstyled list-condensed">
-                <li><a href="#">PyroCMS</a></li>
-                <li><a href="#">Streams Core</a></li>
-            </ul>
-
-            <h4>Setup</h4>
-
-            <ul class="list-unstyled list-condensed">
+                <li><a href="#">Introduction</a></li>
+                <li><a href="#">Streams Platform</a></li>
                 <li><a href="#">Installation</a></li>
                 <li><a href="#">Configuration</a></li>
+                <li><a href="#">Folder Structure</a></li>
             </ul>
 
             <h4>Services</h4>
