--- a/resources/views/partials/header.twig
+++ b/resources/views/partials/header.twig
@@ -23,9 +23,8 @@
                     <li><a href="#">Features</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Addons</a></li>
-                    <li><a href="#">Demo</a></li>
-                    <li><a href="#">Documentation</a></li>
-                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Blog</a></li>
                     <li><a class="btn btn-inverted" href="#">Download</a></li>
                 </ul>
             </div>
