--- a/resources/views/documentation.twig
+++ b/resources/views/documentation.twig
@@ -54,7 +54,8 @@
 
             {% markdown %}
             # PyroCMS
-            <small>PyroCMS is a modern CMS built on Laravel 5 using the Streams Platform.</small>
+
+            ### PyroCMS is a modern CMS built on Laravel 5. You're going to love it.
 
             If you've never used PyroCMS before, this guide will get you up to speed with the basics of PyroCMS and it's
             history.
@@ -66,24 +67,30 @@
 
             ## Basics
 
-            PyroCMS is a modern CMS built on [Laravel 5](http://laravel.com) using the [Streams
-            Platform](http://streamsplatform.com).
+            PyroCMS is a modern CMS built on [Laravel 5](http://laravel.com) and leverages the [Streams
+            Platform](http://streamsplatform.com) in it's core.
 
 
-            <i class="icon checkmark green"></i> **Modern:** PyroCMS is built on the modern and incredibly popular
-            [Laravel 5](http://laravel.com) framework.
+            <i class="icon checkmark green"></i> **For everyone:** PyroCMS is was built for developers, designers, and
+            end users alike.
+
+            <i class="icon checkmark green"></i> **Easy:** If you can define arrays and write a Laravel migration you
+            can do pretty much anything quickly.
+
+            <i class="icon checkmark green"></i> **Powerful:** PyroCMS can be infinitely extended, overridden and
+            configured. Whatever the job, PyroCMS will let you build it elegantly.
+
+            <i class="icon checkmark green"></i> **Extensive:** Never hack the core of your CMS again. Anything and
+            everything can be accomplished with our addon layers.
 
             <i class="icon checkmark green"></i> **Transparent:** PyroCMS does not interfere with Laravel's normal
             behavior but only supplements it.
 
+            <i class="icon checkmark green"></i> **Modern:** PyroCMS is built on the modern and incredibly popular
+            [Laravel 5](http://laravel.com) framework.
+
             <i class="icon checkmark green"></i> **Mature:** Though Version 3 is a 100% rewrite, we have been in the CMS
             business since 2009.
-
-            <i class="icon checkmark green"></i> **For everyone:** PyroCMS is engineered to be simple to use for
-            developers, designers and users alike.
-
-            <i class="icon checkmark green"></i> **Modular:** PyroCMS is composed of a common core and powerful addons.
-            That's it.
 
             <i class="icon checkmark green"></i> **Standard:** PyroCMS adheres to PSR-1 and PSR-2 style guides and is
             entirely PSR-0/4 autoloaded.
