--- a/resources/less/theme/components/type.less
+++ b/resources/less/theme/components/type.less
@@ -1,6 +1,6 @@
 .list-unstyled {
     li {
-        margin-bottom: @padding-base-vertical;
+
     }
 }
 
@@ -22,8 +22,10 @@ h4 a,
 h5 a {
     color: @headings-color;
 
-    &:hover {
+    &:hover,
+    &:focus {
         text-decoration: none;
         color: @headings-color;
+        outline: none;
     }
 }
