--- a/resources/less/theme/variables.less
+++ b/resources/less/theme/variables.less
@@ -7,19 +7,19 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@red:                   #f2364b;
-@blue:                  #00b2d4;
+//@red:                   #f2364b; Provided from settings
+//@blue:                  #00b2d4; Provided from settings
 @navy:                  #3c4e5a;
 @night:                 #142736;
 @smoke:                 #f8f8f8;
-@green:                 #68c188;
-@purple:                #8a8acb;
-@orange:                #f9886c;
+//@green:                 #68c188; Provided from settings
+//@purple:                #8a8acb; Provided from settings
+//@orange:                #f9886c; Provided from settings
 
 @gray-base:              #151515;
 @gray-darker:            #2e2e2e;
 @gray-dark:              #343434;
-@gray:                   #686868;
+//@gray:                   #686868; Provided from settings
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
