--- a/resources/less/theme/layout/header.less
+++ b/resources/less/theme/layout/header.less
@@ -50,6 +50,23 @@
                         background: rgba(255, 255, 255, .2);
                     }
                 }
+
+                &.button {
+                    a {
+                        color: #ffffff;
+                        background: none;
+                        font-weight: 500;
+                        padding: 5px 10px;
+                        border-radius: 3px;
+                        border: 1px solid #ffffff;
+                    }
+
+                    &:hover {
+                        a {
+                            border: 1px solid rgba(255, 255, 255, 0.7);
+                        }
+                    }
+                }
             }
         }
     }
