Header active color

--- a/resources/views/partials/header.twig
+++ b/resources/views/partials/header.twig
@@ -19,14 +19,7 @@
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Addons</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a class="btn btn-inverted" href="#">Download</a></li>
-                </ul>
+                {{ navigation_render('header', {'list_class': 'nav navbar-nav navbar-right'}) }}
             </div>
 
         </div>
