--- a/resources/views/partials/metadata.twig
+++ b/resources/views/partials/metadata.twig
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <meta name="csrf-token" content="{{ csrf_token() }}"/>
 
-<title>{{ config_get('streams.app.name') }} &#8250; {{ trans(template.breadcrumbs.all()|keys|last)|raw }}</title>
+<title>{{ config_get('streams::distribution.name') }} &#8250; {{ trans(template.breadcrumbs.all()|keys|last)|raw }}</title>
 
 <!-- Favicon -->
 {#<link rel="icon" type="image/x-icon" href="{{ image_url('theme::img/favicon.png') }}">
@@ -25,7 +25,5 @@
 {% for style in asset_styles("styles.css") %}
     {{ style|raw }}
 {% endfor %}
-
-{{ html_script(asset_path("theme.js")) }}
 
 {{ constants() }}
