--- a/resources/less/theme/components/jumbotron.less
+++ b/resources/less/theme/components/jumbotron.less
@@ -1,5 +1,9 @@
 .jumbotron {
     margin-bottom: 0 !important;
+
+    h1 {
+        text-transform: uppercase;
+    }
 }
 
 .jumbotron.jumbotron-red {
