--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -7,6 +7,7 @@
 // Components
 @import "components/type";
 @import "components/tiles";
+@import "components/device";
 @import "components/buttons";
 @import "components/carousel";
 @import "components/jumbotron";
