--- a/resources/less/theme/components/jumbotron.less
+++ b/resources/less/theme/components/jumbotron.less
@@ -10,7 +10,7 @@
     background-color: @red;
 }
 
-.jumbotron.jumbotron-smoke {
+.jumbotron.jumbotron-light {
     background-color: @smoke;
 
     * {
@@ -33,6 +33,10 @@
     }
 }
 
+.jumbotron.jumbotron-blue {
+    background-color: @blue;
+}
+
 .jumbotron.jumbotron-gray {
     background-color: @gray;
 }
@@ -49,16 +53,17 @@
     background-color: @orange;
 }
 
-.jumbotron.jumbotron-gray-dark {
+.jumbotron.jumbotron-dark {
     background-color: @gray-dark;
 }
 
 .jumbotron-red,
+.jumbotron-blue,
 .jumbotron-gray,
 .jumbotron-green,
 .jumbotron-orange,
 .jumbotron-purple,
-.jumbotron-gray-dark {
+.jumbotron-dark {
     * {
         color: #ffffff;
     }
