--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -4,6 +4,7 @@
 // Layout
 @import "layout/header";
 @import "layout/footer";
+@import "layout/breadcrumbs";
 // Components
 @import "components/type";
 @import "components/tiles";
@@ -11,5 +12,6 @@
 @import "components/buttons";
 @import "components/carousel";
 @import "components/jumbotron";
+@import "components/breadcrumbs";
 @import "components/scaffolding";
 @import "components/documentation";
