--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -18,6 +18,7 @@
 <body>
 
 {% include "theme::partials/header" %}
+{% include "theme::partials/breadcrumbs" %}
 
 {% block content %}{% endblock %}
 
