--- a/resources/less/theme/variables.less
+++ b/resources/less/theme/variables.less
@@ -802,7 +802,7 @@
 //** Breadcrumb background color
 @breadcrumb-bg:                 #f5f5f5;
 //** Breadcrumb text color
-@breadcrumb-color:              #ccc;
+@breadcrumb-color:              lighten(@gray-light, 10%);
 //** Text color of current page in the breadcrumb
 @breadcrumb-active-color:       @gray-light;
 //** Textual separator for between breadcrumb elements
