--- a/resources/views/layouts/default.twig
+++ b/resources/views/layouts/default.twig
@@ -19,6 +19,7 @@
 
 {% include "theme::partials/header" %}
 {% include "theme::partials/breadcrumbs" %}
+{% include "theme::partials/messages" %}
 
 {% block content %}{% endblock %}
 
