--- a/resources/views/partials/footer.twig
+++ b/resources/views/partials/footer.twig
@@ -1,95 +1,14 @@
 <footer id="footer">
 
     <div class="container">
+        <div class="text-center">
 
-        <div class="div col-lg-4">
+            <h3>&copy; {{ 'now'|date('Y') }} PyroCMS, Inc.</h3>
 
-            <h3>Overview</h3>
-
-            <ul class="list-unstyled">
+            {#<ul class="list-unstyled">
                 <li><a class="text-muted" href="#">Design</a></li>
-                <li><a class="text-muted" href="#">Data</a></li>
-                <li><a class="text-muted" href="#">Showcase</a></li>
-                <li><a class="text-muted" href="#">Enterprise</a></li>
-                <li><a class="text-muted" href="#">Plans</a></li>
-                <li><a class="text-muted" href="#">Blog</a></li>
-            </ul>
+            </ul>#}
         </div>
-
-        <div class="div col-lg-4">
-
-            <h3>About us</h3>
-
-            <ul class="list-unstyled">
-                <li><a class="text-muted" href="#">Our story</a></li>
-                <li><a class="text-muted" href="#">Team</a></li>
-                <li><a class="text-muted" href="#">Jobs</a></li>
-                <li><a class="text-muted" href="#">Press</a></li>
-                <li><a class="text-muted" href="#">Green</a></li>
-                <li><a class="text-muted" href="#">Open source</a></li>
-                <li><a class="text-muted" href="#">Board and investors</a></li>
-            </ul>
-        </div>
-
-        <div class="div col-lg-4">
-
-            <h3>Help</h3>
-
-            <ul class="list-unstyled">
-                <li><a class="text-muted" href="#">Help/FAQ</a></li>
-                <li><a class="text-muted" href="#">Guides</a></li>
-                <li><a class="text-muted" href="#">Status</a></li>
-                <li><a class="text-muted" href="#">Map feedback</a></li>
-                <li><a class="text-muted" href="#">Contact us</a></li>
-                <li><a class="text-muted" href="#">Education</a></li>
-                <li><a class="text-muted" href="#">Security</a></li>
-            </ul>
-        </div>
-
-        <div class="div col-lg-4">
-
-            <h3>Overview</h3>
-
-            <ul class="list-unstyled">
-                <li><a class="text-muted" href="#">Design</a></li>
-                <li><a class="text-muted" href="#">Data</a></li>
-                <li><a class="text-muted" href="#">Showcase</a></li>
-                <li><a class="text-muted" href="#">Enterprise</a></li>
-                <li><a class="text-muted" href="#">Plans</a></li>
-                <li><a class="text-muted" href="#">Blog</a></li>
-            </ul>
-        </div>
-
-        <div class="div col-lg-4">
-
-            <h3>About us</h3>
-
-            <ul class="list-unstyled">
-                <li><a class="text-muted" href="#">Our story</a></li>
-                <li><a class="text-muted" href="#">Team</a></li>
-                <li><a class="text-muted" href="#">Jobs</a></li>
-                <li><a class="text-muted" href="#">Press</a></li>
-                <li><a class="text-muted" href="#">Green</a></li>
-                <li><a class="text-muted" href="#">Open source</a></li>
-                <li><a class="text-muted" href="#">Board and investors</a></li>
-            </ul>
-        </div>
-
-        <div class="div col-lg-4">
-
-            <h3>Help</h3>
-
-            <ul class="list-unstyled">
-                <li><a class="text-muted" href="#">Help/FAQ</a></li>
-                <li><a class="text-muted" href="#">Guides</a></li>
-                <li><a class="text-muted" href="#">Status</a></li>
-                <li><a class="text-muted" href="#">Map feedback</a></li>
-                <li><a class="text-muted" href="#">Contact us</a></li>
-                <li><a class="text-muted" href="#">Education</a></li>
-                <li><a class="text-muted" href="#">Security</a></li>
-            </ul>
-        </div>
-
     </div>
 
 </footer>
