--- a/resources/views/layouts/documentation.twig
+++ b/resources/views/layouts/documentation.twig
@@ -21,6 +21,10 @@
 {% include "theme::partials/breadcrumbs" %}
 {% include "theme::partials/messages" %}
 
+<div class="container">
+    <h4>Thank you for being patient while we continue to publish documentation and resources and site content!</h4>
+</div>
+
 {% block content %}{% endblock %}
 
 {% include "theme::partials/footer" %}
