--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -15,3 +15,5 @@
 @import "components/breadcrumbs";
 @import "components/scaffolding";
 @import "components/documentation";
+// Addons
+@import "addon/posts";
