--- a/resources/views/addon/posts-module/partials/posts.twig
+++ b/resources/views/addon/posts-module/partials/posts.twig
@@ -1,9 +1,9 @@
 {% for post in posts %}
-    <article class="post col-lg-6 tile">
+    <article class="post">
 
         <header>
 
-            <h1 class="tile-header"><a href="{{ url(post.path) }}">{{ post.title }}</a></h1>
+            <h2><a href="{{ url(post.path) }}">{{ post.title }}</a></h2>
 
             <div class="meta">
 
@@ -17,23 +17,23 @@
 
                 {% if post.category %}
                     <span class="category">
-                    {{ html_link(post.category.path, post.category.name) }}
-                </span>
+                        {{ html_link(post.category.path, post.category.name) }}
+                    </span>
                 {% endif %}
 
                 {% if post.tags %}
                     <span class="tags">
-                    {{ post.tags.labels|raw }}
-                </span>
+                        {{ post.tag_links|raw }}
+                    </span>
                 {% endif %}
 
             </div>
 
         </header>
 
-        <div class="excerpt">
-            {% if post.excerpt %}
-                <p>{{ post.excerpt|raw }}</p>
+        <div class="summary">
+            {% if post.summary %}
+                <p>{{ post.summary|nl2br|raw }}</p>
             {% endif %}
         </div>
 
