--- a/resources/views/addon/posts-module/posts/index.twig
+++ b/resources/views/addon/posts-module/posts/index.twig
@@ -1,7 +1,11 @@
-{% extends "streams::blank" %}
+{% extends settings_get("anomaly.module.posts::theme_layout", "theme::layouts/default") %}
 
 {% block content %}
-    <div id="posts" class="container">
-        {% include "anomaly.module.posts::partials/posts" %}
+    <div id="posts">
+
+        {{ view("anomaly.module.posts::posts/partials/posts", {"posts": posts}) }}
+
+        {{ posts.render|raw }}
+
     </div>
 {% endblock %}
