--- a/resources/views/layouts/posts.twig
+++ b/resources/views/layouts/posts.twig
@@ -28,7 +28,9 @@
         </div>
 
         <div class="col-lg-6">
-            Sidebar
+            {{ blocks_render('categories') }}
+            {{ blocks_render('recent-posts') }}
+            {{ blocks_render('featured-posts') }}
         </div>
 
     </div>
