--- a/resources/views/layouts/posts.twig
+++ b/resources/views/layouts/posts.twig
@@ -28,9 +28,8 @@
         </div>
 
         <div class="col-lg-6">
-            {{ blocks_render('categories') }}
+            {{ blocks_render('post-categories') }}
             {{ blocks_render('recent-posts') }}
-            {{ blocks_render('featured-posts') }}
         </div>
 
     </div>
