--- a/resources/less/theme/theme.less
+++ b/resources/less/theme/theme.less
@@ -11,6 +11,7 @@
 @import "components/device";
 @import "components/buttons";
 @import "components/carousel";
+@import "components/callouts";
 @import "components/jumbotron";
 @import "components/breadcrumbs";
 @import "components/scaffolding";
